--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@ SOFTWARE.
   <artifactId>eo-strings</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
-  <name>eo-json</name>
+  <name>eo-strings</name>
   <properties>
     <eolang.version>0.24.0</eolang.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -66,7 +66,7 @@ SOFTWARE.
   </developers>
   <issueManagement>
     <system>GitHub</system>
-    <url>https://github.com/objectionary/eo-json/issues</url>
+    <url>https://github.com/objectionary/eo-strings/issues</url>
   </issueManagement>
   <scm>
     <connection>scm:git:git@github.com:objectionary/eo-strings.git</connection>
