--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@ SOFTWARE.
   <parent>
     <groupId>com.jcabi</groupId>
     <artifactId>parent</artifactId>
-    <version>0.60.4</version>
+    <version>0.61.0</version>
   </parent>
   <groupId>org.eolang</groupId>
   <artifactId>eo-strings</artifactId>
@@ -35,7 +35,6 @@ SOFTWARE.
   <packaging>jar</packaging>
   <name>eo-strings</name>
   <properties>
-    <eolang.version>0.27.0</eolang.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
@@ -87,18 +86,18 @@ SOFTWARE.
     <dependency>
       <groupId>org.eolang</groupId>
       <artifactId>eo-runtime</artifactId>
-      <version>${eolang.version}</version>
+      <version>0.27.2</version>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
-      <version>5.6.2</version>
+      <version>5.9.0</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-params</artifactId>
-      <version>5.6.2</version>
+      <version>5.9.0</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
@@ -112,7 +111,7 @@ SOFTWARE.
       <plugin>
         <groupId>org.eolang</groupId>
         <artifactId>eo-maven-plugin</artifactId>
-        <version>${eolang.version}</version>
+        <version>0.27.2</version>
         <executions>
           <execution>
             <id>compile</id>
@@ -124,6 +123,13 @@ SOFTWARE.
               <goal>unspile</goal>
               <goal>copy</goal>
             </goals>
+            <configuration>
+              <keepBinaries>
+                <glob>EOorg/EOeolang/EOio/**</glob>
+                <glob>EOorg/EOeolang/EOfs/**</glob>
+              </keepBinaries>
+              <failOnWarning>true</failOnWarning>
+            </configuration>
           </execution>
           <execution>
             <id>test-compile</id>
@@ -153,6 +159,7 @@ SOFTWARE.
           <plugin>
             <groupId>com.qulice</groupId>
             <artifactId>qulice-maven-plugin</artifactId>
+            <version>0.21.1</version>
             <configuration>
               <excludes combine.children="append">
                 <exclude>pmd:.*</exclude>
