--- a/.github/workflows/mvn.yml
+++ b/.github/workflows/mvn.yml
@@ -1,6 +1,6 @@
 ---
 name: mvn
-"on":
+on:
   push:
     branches:
       - master
@@ -8,7 +8,7 @@ name: mvn
     branches:
       - master
 jobs:
-  maven-build:
+  mvn:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
@@ -16,10 +16,11 @@ jobs:
         java: [11, 17]
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-java@v1
+      - uses: actions/setup-java@v3
         with:
+          distribution: 'temurin'
           java-version: ${{ matrix.java }}
-      - uses: actions/cache@v1
+      - uses: actions/cache@v3
         with:
           path: ~/.m2/repository
           key: ${{ runner.os }}-jdk-${{ matrix.java }}-maven-${{ hashFiles('**/pom.xml') }}
