--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@ SOFTWARE.
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <stack-size>256M</stack-size>
   </properties>
   <description>EO objects for manipulations with strings.</description>
   <url>https://github.com/objectionary/eo-strings</url>
@@ -107,6 +108,13 @@ SOFTWARE.
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.8.1</version>
         <configuration combine.self="override"/>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <configuration>
+          <argLine>-Xss${stack-size}</argLine>
+        </configuration>
       </plugin>
       <plugin>
         <groupId>org.eolang</groupId>
