set failOnWarning to false

--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,8 @@ SOFTWARE.
               <keepBinaries>
                 <glob>EOorg/EOeolang/EOtxt/**</glob>
               </keepBinaries>
-              <failOnWarning>true</failOnWarning>
+              <!-- @todo #108:90min Set failOnWarning to 'true'. It's not a good idea to allow deploy artifacts with warnings. It's only temporary solution. -->
+              <failOnWarning>false</failOnWarning>
             </configuration>
           </execution>
           <execution>
