--- a/pom.xml
+++ b/pom.xml
@@ -127,7 +127,7 @@ SOFTWARE.
               <keepBinaries>
                 <glob>EOorg/EOeolang/EOtxt/**</glob>
               </keepBinaries>
-              <!-- @todo #108:90min Set failOnWarning to 'true'. It's not a good idea to allow deploy artifacts with warnings. It's only temporary solution. -->
+              <!-- @todo #108:90min Set failOnWarning to 'true'. It's not a good idea to allow deploy artifacts with warnings. Ww did it only because of failures in other repositories. -->
               <failOnWarning>false</failOnWarning>
             </configuration>
           </execution>
