--- a/pom.xml
+++ b/pom.xml
@@ -86,7 +86,7 @@ SOFTWARE.
     <dependency>
       <groupId>org.eolang</groupId>
       <artifactId>eo-runtime</artifactId>
-      <version>0.28.14</version>
+      <version>0.28.16</version>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -111,7 +111,7 @@ SOFTWARE.
       <plugin>
         <groupId>org.eolang</groupId>
         <artifactId>eo-maven-plugin</artifactId>
-        <version>0.28.14</version>
+        <version>0.28.16</version>
         <executions>
           <execution>
             <id>compile</id>
@@ -127,8 +127,7 @@ SOFTWARE.
               <keepBinaries>
                 <glob>EOorg/EOeolang/EOtxt/**</glob>
               </keepBinaries>
-              <!-- @todo #108:90min Set failOnWarning to 'true'. It's not a good idea to allow deploy artifacts with warnings. We have to do it only because of failures in other repositories. -->
-              <failOnWarning>false</failOnWarning>
+              <failOnWarning>true</failOnWarning>
             </configuration>
           </execution>
           <execution>
