--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@ SOFTWARE.
   </parent>
   <groupId>org.eolang</groupId>
   <artifactId>eo-strings</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>0.2.0</version>
   <packaging>jar</packaging>
   <name>eo-strings</name>
   <properties>
