--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,7 @@ SOFTWARE.
     <dependency>
       <groupId>org.eolang</groupId>
       <artifactId>eo-runtime</artifactId>
-      <version>0.29.1</version>
+      <version>0.29.4</version>
     </dependency>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
@@ -119,7 +119,7 @@ SOFTWARE.
       <plugin>
         <groupId>org.eolang</groupId>
         <artifactId>eo-maven-plugin</artifactId>
-        <version>0.29.1</version>
+        <version>0.29.4</version>
         <executions>
           <execution>
             <id>compile</id>
@@ -135,7 +135,7 @@ SOFTWARE.
               <keepBinaries>
                 <glob>EOorg/EOeolang/EOtxt/**</glob>
               </keepBinaries>
-              <failOnWarning>true</failOnWarning>
+              <failOnWarning>false</failOnWarning>
             </configuration>
           </execution>
           <execution>
